--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
+    "serve": "vite dev",
     "build": "vite build",
     "watch": "vite build --watch --config ./vite.config.js"
   },
