--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "vite": "^6.0.1",
     "vite-plugin-html": "^3.2.2",
     "vite-plugin-singlefile": "^2.1.0"
+  },
+  "dependencies": {
+    "@types/howler": "^2.2.12",
+    "howler": "^2.2.4"
   }
 }
